# moflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: check-secrets.yml  ci.yml  release.yml
.husky/: pre-commit
.opencode/plans/: tab-switch-perf.md
docs/: ROADMAP.md  env-vars.md  skill-store.md  spec-context-view.md
docs/plans/: v0.8.5.md
scripts/: check-secrets.sh  generate_file_icon.py  release.mjs  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  md-file.icns
src-tauri/src/: lib.rs  snapshot.rs
src-tauri/windows/: hooks.nsh
src/components/: ErrorBoundary.tsx
src/components/AISidebar/: AIConfigModal.tsx  AISidebar.css  AISidebar.tsx  ContextView.tsx  MessageContent.css  MessageContent.tsx  PermissionBar.tsx  QuestionBar.tsx  SlashCommandMenu.css  SlashCommandMenu.tsx  SubAgentCard.tsx  SubAgentView.tsx
src/components/AboutDialog/: AboutDialog.css  AboutDialog.tsx
src/components/ConfirmCloseDialog/: ConfirmCloseDialog.css  ConfirmCloseDialog.tsx
src/components/Editor/: Editor.css  Editor.tsx  SearchBar.css  SearchBar.tsx  SelectionAIPanel.css  SelectionAIPanel.tsx
src/components/FileTree/: FileTree.tsx
src/components/HamburgerMenu/: HamburgerMenu.css  HamburgerMenu.tsx
src/components/OutlineSidebar/: OutlineSidebar.css  OutlineSidebar.tsx
src/components/SettingsPanel/: EnvVarsSection.tsx  SettingsPanel.css  SettingsPanel.tsx  ShortcutsSection.tsx  SkillsSection.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/TabBar/: TabBar.css  TabBar.tsx
src/components/TitleBar/: TitleBar.css  TitleBar.tsx
src/components/ToastContainer/: ToastContainer.tsx
src/components/Toolbar/: Toolbar.tsx
src/components/UpdateDialog/: UpdateDialog.css  UpdateDialog.tsx
src/i18n/: core.ts  index.tsx  useT.ts
src/i18n/locales/: en.ts  ja.ts  ko.ts  zh.ts
src/lib/: aiConfig.ts  chatPersistence.ts  closeDialog.ts  contextBuilder.ts  exportHtml.ts  fileOps.ts  highlightMark.ts  htmlBlock.ts  i18n.ts  imageManager.ts  inputHistory.ts  llmClient.ts  markdownSyntax.ts  mdastHighlight.ts  mermaidPlugin.ts  micromarkHighlight.ts  modelInfo.ts  modelPricing.json  outlineTree.ts  pathUtils.ts  permission.ts  remarkHighlight.ts  searchPlugin.ts  settings.ts  shortcuts.ts  skillManager.ts  skillRegistry.ts  snapshot.ts  subAgentRunner.ts  themeCSS.ts  toast.ts  toolbarTooltip.ts  tools.ts  traceTypes.ts  tracer.ts  types.ts  undoManager.ts  updater.ts
src/lib/prompt/: default.txt
src/stores/: aiConfigStore.ts  aiSelectionStore.ts  appStore.ts  chatStore.ts  permissionStore.ts  searchStore.ts  sessionStore.ts  skillStore.ts  tabStore.ts  themeStore.ts  toastStore.ts  updateStore.ts
src/stubs/: language-data.ts  prosemirror-search.ts
src/test/: aiSelectionStore.test.ts  chatPersistence.test.ts  chatStore.test.ts  contextBuilder.test.ts  modelInfo.test.ts  pathUtils.test.ts  permissionStore.test.ts  searchStore.test.ts  settings.test.ts  setup.ts  shortcuts.test.ts  skillManager.test.ts  subAgentRunner.test.ts  tabStore.test.ts  themeStore.test.ts  toolbarTooltip.test.ts  tools.test.ts  undoManager.test.ts
tests/: markdown-support.md  test-markdown-spec.md
