[package]
name = "moflow"
version = "0.7.5"
description = "MoFlow - A Markdown Editor"
authors = ["MoFlow"]
license = "MIT"
repository = "https://github.com/anomalyco/moflow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "socks"], default-features = false }
regex = "1"
htmd = "0.5"
base64 = "0.22"
url = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { version = "1", features = ["macros", "sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
